--- a/WK2/Bayes_Logistic.Rmd
+++ b/WK2/Bayes_Logistic.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(MASS)
 library(ggfortify)
+library(cluster)
 ```
 Simple case
 
@@ -21,19 +22,29 @@ Generate data
 set.seed(525)
 n <- 100
 x <- sample(x = c(0,1), size = n, replace = TRUE)
-beta_0 <- rnorm(1, 0, 2) # -0.6
-beta_1 <- rnorm(1, 0, 2) # 0.95
+x_mx <- matrix(c(rep(1, n), x), ncol = n, byrow = TRUE)
+# Get the true beta
+mean <- c(0, 0)                                   
+cov_mx <- matrix(c(2, 0, 0, 2),
+                                   ncol = 2)
+  
+# create bivariate normal distribution
+beta_true <- mvrnorm(n = n,
+                        mu = mean, 
+                        Sigma = cov_mx)
+
+# beta_0 <- rnorm(1, 0, 2) # -0.6
+# beta_1 <- rnorm(1, 0, 2) # 0.95
 
 logit_inv <- function(x){
   1/(1+exp(-x))
 }
 
-pr <- logit_inv(beta_0 + beta_1*x)
+
+pr <- logit_inv(diag(beta_true %*% x_mx))
 y <- rbinom(n,1,pr)
 y_hat <- 2*y-1
 
-beta <- matrix(c(1,2), ncol = 1)
-x_mx <- matrix(c(rep(1, n), x), ncol = n, byrow = TRUE)
 ```
 
 Get the Prior
@@ -44,8 +55,8 @@ prior_cov_mx <- matrix(c(1000, 0, 0, 1000),
   
 # create bivariate normal distribution
 sample_prior <- mvrnorm(n = 1,
-                        mu = sample_meanvector, 
-                        Sigma = sample_covariance_matrix)
+                        mu = prior_mean, 
+                        Sigma = prior_cov_mx)
 
 ```
 
@@ -87,7 +98,7 @@ get_map <- function(beta_ini = matrix(c(0,0), ncol = 1),
 Sample from the posterior Dist of beta
 ```{r}
 set.seed(525)
-size <- 1000
+size <- 10000
 sample_posterior <- mvrnorm(n = size,
                         mu = beta_map, 
                         Sigma = beta_cov_mx)
@@ -96,7 +107,7 @@ sample_posterior <- mvrnorm(n = size,
 Sample from the true Dist of beta
 ```{r}
 set.seed(525)
-size <- 1000
+size <- 10000
 sample_true <- mvrnorm(n = size,
                         mu =  c(0, 0), 
                         Sigma = matrix(c(2, 0, 0, 2),
@@ -110,18 +121,146 @@ pca_res <- prcomp(sample_posterior, scale. = TRUE)
 
 autoplot(pca_res,frame = TRUE, frame.type = 'norm')
 ```
+```{r}
+pca <- prcomp(sample_posterior, scale. = TRUE)
+
+axes <- predict(pca, newdata = sample_posterior)
+pc1 <- axes[,1]
+pc2 <- axes[,2]
+
+data <- as.data.frame(cbind(pc1, pc2))
+
+# Area + contour
+ggplot(data, aes(x=pc1, y=pc2) ) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", colour="white")
+
+```
 
 ```{r}
 pca_res <- prcomp(sample_true, scale. = TRUE)
 
 autoplot(pca_res,frame = TRUE, frame.type = 'norm')
 ```
+```{r}
+pca <- prcomp(sample_true, scale. = TRUE)
+
+axes <- predict(pca, newdata = sample_true)
+pc1 <- axes[,1]
+pc2 <- axes[,2]
+
+data <- as.data.frame(cbind(pc1, pc2))
+
+# Area + contour
+ggplot(data, aes(x=pc1, y=pc2) ) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", colour="white")
+
+```
+
+Sample from the true high Dim Dist of beta
+```{r}
+set.seed(525)
+size <- 10000
+dim <- 14
+
+mu_list <- runif(dim, -1, 3)
+cov_mx <- diag(runif(dim, 0, 2))
+
+sample_true1 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
+
+mu_list <- runif(dim, 1, 3)
+cov_mx <- diag(runif(dim, 0, 2))
+sample_true2 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
+
+mu_list <- runif(dim, 1, 5)
+cov_mx <- diag(runif(dim, 0, 2))
+sample_true3 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
 
 
+mu_list <- runif(dim, -1, 5)
+cov_mx <- diag(runif(dim, 0, 2))
+sample_true4 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
+
+sample_true <- rbind(sample_true1,
+                     sample_true2,
+                     sample_true3,
+                     sample_true4)
+```
+
+```{r}
+pca_res <- prcomp(sample_true, scale. = TRUE)
+
+autoplot(pca_res)
+```
 
 
+```{r}
+pca <- prcomp(sample_true, scale. = TRUE)
+
+axes <- predict(pca, newdata = sample_true)
+pc1 <- axes[,1]
+pc2 <- axes[,2]
+
+data <- as.data.frame(cbind(pc1, pc2))
+
+# Area + contour
+ggplot(data, aes(x=pc1, y=pc2) ) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", colour="white")
+
+```
+
+Sample from the true high Dim Dist of beta
+```{r}
+set.seed(525)
+size <- 5000
+dim <- 14
+
+mu_list <- runif(dim, 1, 2)
+cov_mx <- diag(rep(1,dim))
+
+sample_true1 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
+
+mu_list <- runif(dim, 2, 3)
+cov_mx <- diag(rep(4,dim))
+sample_true2 <- mvrnorm(n = size,
+                        mu =  mu_list, 
+                        Sigma = cov_mx)
 
 
+sample_true <- rbind(sample_true1,
+                     sample_true2)
+```
+
+```{r}
+pca_res <- prcomp(sample_true, scale. = TRUE)
+
+autoplot(pca_res)
+```
+
+
+```{r}
+pca <- prcomp(sample_true, scale. = TRUE)
+
+axes <- predict(pca, newdata = sample_true)
+pc1 <- axes[,1]
+pc2 <- axes[,2]
+
+data <- as.data.frame(cbind(pc1, pc2))
+
+# Area + contour
+ggplot(data, aes(x=pc1, y=pc2) ) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", colour="white")
+
+```
 
 
 
