--- a/WK3/loss_function.Rmd
+++ b/WK3/loss_function.Rmd
@@ -163,6 +163,136 @@ plot(x = c(1:100), y = phi_list, type= "l")
 phi_list[100]
 ```
 
+```{r}
+set.seed(525)
+
+temp <- rnorm(3)
+
+vec1 <- matrix(c(2,1), ncol = 1)
+vec2 <- matrix(c(3,2), ncol = 1)
+vec3 <- matrix(c(17,7), ncol = 1)
+
+1/3*(temp[1]*vec1 + temp[2]*vec2 + temp[3]*vec3)
+
+cbind(vec1, vec2, vec3) %*% matrix(temp, ncol =1) * (1/3)
+```
+
+```{r, warning=FALSE, message=FALSE}
+library(tidyverse)
+
+set.seed(525)
+n <- 1e3
+z <- rnorm(n)
+X <- 6
+```
+
+```{r}
+grad_t <- function(z){
+  matrix(c(z, 1), ncol = 1)
+}
+```
+
+```{r}
+get_first_term <- function(z){
+  
+  grad_t_list <- map(z, ~grad_t(.x))
+
+  grad_t_mx <- matrix(unlist(grad_t_list), ncol = n)
+  
+  grad_t_mx
+}
+```
+
+```{r}
+grad_t_list <- map(z, ~grad_t(.x))
+
+grad_t_mx <- matrix(unlist(grad_t_list), ncol = n)
+```
+
+```{r}
+temp <- get_first_term(z)
+```
+
+```{r}
+t2_fun <- function(z, phi){
+  phi[1]*z + phi[2]
+}
+```
+
+```{r}
+get_grad_second_term <- function(z, phi_in){
+
+  (1/9)*(t2_fun(z,phi = phi_in) - X) +
+    (1/4)*(t2_fun(z,phi = phi_in) - 5)
+}
+
+```
+
+```{r}
+get_grad_second_term(z[1], phi_in = vec1)
+```
+
+```{r}
+second_term <- map_dbl(z, ~get_grad_second_term(.x, phi_in = vec1))
+```
+
+```{r}
+first_term <- get_first_term(z)
+```
+
+```{r}
+first_term %*% second_term * 1/(length(z))
+```
+
+
+```{r}
+get_grad_2 <- function(z, phi_input){
+  first_term <- get_first_term(z)
+  second_term <- map_dbl(z, ~get_grad_second_term(.x, phi_in = phi_input))
+  grad <- first_term %*% second_term * 1/(length(z))
+  grad[1] <- grad[1] - 1/phi_input[1]
+  grad
+}
+```
+
+```{r}
+get_grad_2(z, vec1)
+```
+
+```{r}
+phi_ini <- matrix(c(1,1), ncol = 1)
+
+phi_temp <- phi_ini
+
+for(i in 1:100){
+  phi_new <- phi_temp - 0.1 * get_grad_2(z, phi_temp)
+  phi_temp <- phi_new
+}
+
+phi_temp
+```
+
+```{r}
+sqrt(36/13)
+```
+
+```{r}
+get_grad_2(z, matrix(c(1.664101, 5), ncol = 1))
+```
+
+
+```{r}
+
+```
+
+
+
+
+
+
+
+
+
 
 
 
