--- a/WK5/3_guassian_mixture.Rmd
+++ b/WK5/3_guassian_mixture.Rmd
@@ -26,5 +26,213 @@ z_mix <- c(z1, z2, z3)
 hist(z_mix, breaks = 60)
 ```
 
+Posterior density function
+```{r}
+dnorm(0)
+
+```
+
+```{r}
+x <- 0
+1/(sqrt(2*pi)*1)*exp(-1/(2*1)*(x-0)^2)
+```
+
+```{r}
+x <- 0
+(1/3)*dnorm(x, mean = 0, sd = 1) + (1/3)*dnorm(x, mean = 5, sd = 1) + (1/3)*dnorm(x, mean = 10, sd = 1)
+```
+
+```{r}
+get_post <- function(x){
+  (1/3)*dnorm(x, mean = 0, sd = 1) +
+    (1/3)*dnorm(x, mean = 5, sd = 1) + 
+    (1/3)*dnorm(x, mean = 10, sd = 1)
+}
+```
+
+```{r}
+get_post(0)
+```
+
+Compute loss function
+```{r}
+set.seed(525)
+
+n <- 1000
+z <- rnorm(n)
+
+t_fun <- function(z, phi){
+  sqrt(36/13)*z + phi
+}
+
+get_Exp_post <- function(phi_in){
+
+  mean(log( sqrt(13/36) * dnorm(z) ) -
+       log( get_post(t_fun(z, phi = phi_in) ) )
+       )
+}
+
+```
+
+```{r}
+get_Exp_post(phi_in = 5.3)
+```
+
+```{r, message=FALSE, warning=FALSE}
+library(tidyverse)
+```
+
+```{r}
+phi_list <- seq(from = 0, to = 10, by = 0.01)
+
+result_1 <- map_dbl(phi_list, ~get_Exp_post(.x))
+
+plot(x = phi_list, y = result_1, type = "l")
+```
+
+```{r}
+phi_list[which.min(result_1)]
+```
+
+```{r}
+trans_z <- t_fun(z, phi = 5.4)
+```
+
+```{r}
+hist(trans_z)
+```
+
+2-Dim case
+```{r}
+library(MASS)
+library(mvtnorm)
+```
+
+```{r}
+set.seed(525)
+sample_size <- 1000                                       
+mean_z1 <- c(10, 5)                                   
+cov_z1 <- matrix(c(1, 0, 0, 1), ncol = 2)
+mean_z2 <- c(20, 10)
+mean_z3 <- c(17.5, 0)
+  
+z1 <- rmvnorm(n = sample_size,
+              mean = mean_z1,
+              sigma = cov_z1)
+
+z2 <- rmvnorm(n = sample_size,
+              mean = mean_z2,
+              sigma = cov_z1)
+
+z3 <- rmvnorm(n = sample_size,
+              mean = mean_z3,
+              sigma = cov_z1)
+
+z_all <- rbind(z1, z2, z3)
+
+head(z_all)
+```
+
+
+
+```{r}
+plot(x = z_all[,1], y = z_all[,2])
+```
+
+
+```{r}
+
+get_post_2d <- function(z){
+  (1/3)*dmvnorm(z, mean = mean_z1, sigma = cov_z1) +
+    (1/3)*dmvnorm(z, mean = mean_z2, sigma = cov_z1) + 
+    (1/3)*dmvnorm(z, mean = mean_z3, sigma = cov_z1)
+}
+
+```
+
+```{r}
+z_all[1,]
+```
+```{r}
+c(10.431526, 3.930934)
+```
+
+
+```{r}
+get_post_2d(z_all[1,])
+```
+
+
+
+Compute loss function
+```{r}
+set.seed(525)
+
+n <- 1000
+z <- rmvnorm(n = n,
+              mean = c(0,0),
+              sigma = cov_z1)
+
+t_fun <- function(z, phi){
+  sqrt(36/13)*z + phi
+}
+
+get_Exp_post_2d <- function(phi_in){
+
+  mean(log( sqrt(13/36) * dmvnorm(z) ) -
+       log( get_post_2d(t_fun(z, phi = phi_in) ) )
+       )
+}
+
+```
+
+```{r}
+z %>% head()
+```
+
+```{r}
+t_fun(z, phi = 5) %>% head()
+```
+
+```{r}
+dmvnorm(z[1,])
+```
+
+```{r}
+dmvnorm(c(0,0))
+```
+```{r}
+dmvnorm(c(17.9690,-0.5707), mean = c(17.5, 0), sigma = cov_z1)/3 +
+dmvnorm(c(17.9690,-0.5707), mean = c(10, 5), sigma = cov_z1)/3 +
+dmvnorm(c(17.9690,-0.5707), mean = c(20, 10), sigma = cov_z1)/3
+```
+
+
+```{r}
+log( sqrt(13/36) * dmvnorm(z) ) %>% head()
+```
+
+```{r}
+get_Exp_post_2d(phi_in = 3)
+```
+
+```{r}
+phi_list <- seq(from = 0, to = 10, by = 0.01)
+
+result_1 <- map_dbl(phi_list, ~get_Exp_post_2d(.x))
+
+plot(x = phi_list, y = result_1, type = "l")
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
