--- a/WK5/3_guassian_mixture.Rmd
+++ b/WK5/3_guassian_mixture.Rmd
@@ -66,6 +66,81 @@ get_post <- function(x){
 ```{r}
 get_post(0)
 ```
+```{r}
+pnorm(0)
+```
+```{r}
+qnorm(0.5)
+```
+```{r}
+get_post_cdf <- function(x){
+  (1/3)*pnorm(x, mean = 0, sd = 1) +
+    (1/3)*pnorm(x, mean = 5, sd = 1) + 
+    (1/3)*pnorm(x, mean = 10, sd = 1)
+}
+```
+
+```{r}
+get_post_cdf(x = 5)
+```
+```{r}
+get_post_cdf_inv <- function(x){
+  (1/3)*qnorm(x, mean = 0, sd = 1) +
+    (1/3)*qnorm(x, mean = 5, sd = 1) + 
+    (1/3)*qnorm(x, mean = 10, sd = 1)
+}
+```
+
+```{r}
+get_post_cdf_inv(0.5)
+```
+```{r}
+plot(density(z_mix))
+```
+```{r}
+plot(ecdf(z_mix))
+```
+```{r}
+quantile(z_mix, 0.3)
+```
+
+```{r}
+t(0.7)
+```
+
+a mapping t
+```{r}
+set.seed(525)
+
+n <- 1000
+z <- rnorm(n)
+```
+
+```{r}
+temp_t_fun <- function(z){
+  quantile = pnorm(z)
+  result = quantile(z_mix, quantile)
+  result
+}
+```
+
+```{r}
+res <- temp_t_fun(z)
+```
+
+```{r}
+hist(res, breaks = 60)
+```
+Plot such t
+```{r}
+z_in <- seq(from = -7.5, to = 7.5, by = 0.1)
+y_in <- temp_t_fun(z_in)
+
+plot(x = z_in, y = y_in, type = "l")
+```
+```{r}
+plot(ecdf(z_mix))
+```
 
 Compute loss function
 ```{r}
